crates/keron-lang/tests/corpus/errors/check/struct_shorthand_unbound.keron
# Shorthand binds a same-named variable; here no `port` is in scope.
struct Host { name: String, port: Int }

val h: Host = Host { name: "a", port }
